# trading

./: .gitignore  TODO.txt  data fix.txt  data_fix.txt  pyproject.toml
.cursor/rules/: No-Refactor.mdc  Trading.mdc
.github/: copilot-instructions.md
api/: data (Depreciated).py  data.py
backtester/: truth_layer.py
configs/backtests/: default_backtest.yaml
configs/dataset/: default_update.yaml  test.yaml
data/: fetch.py  store.py
docs/: architecture.md
research/: template.ipynb  test copy.ipynb  test.ipynb  test_copy.ipynb
research/configs/: default.yaml  default_config.yaml
research/strategy_notes/: strategy_ideas.txt
scripts/: test.py  truth_layer.py  truth_layer_defunct.py  update_data copy.py  update_data.py  update_data_V1.py  update_data_V2.py
src/: candle.py  enums.py
src/backtester/: config.py  data_loader.py  metrics.py  metrics_old.py  pnl.py  runner.py  truth_layer.py  utils.py
src/backtester/engine/: __init__.py  config.py  config_loader.py  enums.py  results.py  runner.py
src/backtester/metrics/: __init__.py  core_stats.py  cost_metrics.py  display.py  performance_report.py  position_metrics.py  results.py  return_metrics.py  (+2 more)
src/backtester/metrics bakckup/: __init__.py  core_stats.py  cost_metrics.py  performance_report.py  position_metrics.py  return_metrics.py  risk_metrics.py
src/data_utils/: config.py  fetch.py  io.py  paths.py  prepare.py  update_data.py
src/data_utils_n/: fetch.py  io.py  paths.py
src/risk/: temp_sizer.py
src/trading/: logging_config.py
src/utils/: plots.py  store.py
tests/: test_performance.py
(+650 files in other folders)
