[project]
name = "trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numba>=0.66.0",
    "numpy>=2.0,<3",
    "pandas>=2.2",
    "pybit>=5.16.0",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "ipython>=9.15.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
