[project]
name = "trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numba>=0.66.0",
    "numpy>=2.0,<3",
    "pandas>=2.2",
    "pyarrow>=24.0.0",
    "pybit>=5.16.0",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "ipython>=9.15.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
